src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-Div.deca
// Description:
//    Overflow for a float arithmetic division
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 13/01/2022

{
    //TODO
}
